Фикс код-стайла и ворнингов